--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -16,82 +16,127 @@
     justify-content: space-between;
     flex-wrap: wrap;
     color: $color-light;
+    margin-bottom: 100px;
+
+
+
+    .boxes-other-pages {
+        height: 150px;
+        display: flex;
+        font-size: 20px;
+        gap: 10px;
+    }
+    .leave-home-box {
+        position: relative;
+        width: 95%;
+        height: 100%;
+        margin: auto;
+    }
+
+    .leave-home-box-text:hover {
+        translate: 0px -20px;
+    }
+
+    .leave-home-box > .leave-home-box-text {
+        transition: 0.5s ease-in-out;
+    }
+
+    .leave-home-box-image {
+        height: 100%;
+    }
+    .leave-home-box img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .leave-home-box-text {
+        position: absolute;
+        margin: auto;
+        top: 20px;
+        width: 100%;
+        height: 100%;
+    }
+    .leave-home-box-text p{
+        font-size: 12px;
+        font-weight: 200;
+        font-family: 'Lato', sans-serif;
+        position: absolute;
+        top: 113px;
+        right: 40px;
+    }
+
+    .leave-home-box-text h2 {
+        text-align: center;
+        position: relative;
+    }
+
+
+    .boxes-info {
+        display: flex;
+        justify-content: center;
+        padding: 30px;
+        flex-wrap: wrap;
+        background-color: $color-main;
+        height: 150px;
+        flex-direction: column;
+        font-size: 28px;
+    }
+
+    .opening-hour {
+        display: flex;
+        margin: auto;
+    }
+
+    .home-hour-paragraph {
+        font-size: 16px;
+        font-weight: 300;
+    }
 }
 
+.main-carousel {
+    margin-bottom: 120px;
 
-.boxes-other-pages {
-    height: 150px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-    font-size: 20px;
-    gap: 10px;
-}
-.leave-home-box {
-    justify-content: space-between;
-    position: relative;
-    width: 95%;
-    height: 100%;
-    margin: auto;
-    background-color: $color-darker;
-}
+    .caurousel-cell {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
 
-.leave-home-box-image {
-    height: 100%;
-}
-.leave-home-box img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    &-image {
+        height: 260px;
+        width: 660px;
+    }
+
+    img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    &-text {
+        padding-left: 50px;
+        padding-right: 200px;
+    }
+
+    &-text p {
+        padding-right: 60px;
+    }
+    
 
 
-.leave-home-box-text {
-    position: absolute;
-    margin: auto;
-    top: 20px;
-    width: 100%;
-    height: 100%;
 }
 
-.leave-home-box-text h2 {
-    text-align: center;
-    position: relative;
+.home-inst-grid {
+    margin-top: 20px;
 }
-
-
-.boxes-info {
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-    flex-wrap: wrap;
-    background-color: $color-main;
-    color: $color-light;
-    height: 150px;
-    flex-direction: column;
-    font-size: 28px;
-    margin: 0,0, 30px,0;
-}
-
-.opening-hour {
-    display: flex;
-    margin: auto;
-}
-
-.home-hour-paragraph {
-    font-size: 16px;
-    font-weight: 300;
-}
-
 
 .home-inst-row {
-    margin: 20px, 0, 0, 0;
     display: flex;
 	flex-direction: row;
-	height: 200px;
+	height: 250px;
 	width: 100%;
     gap: 10px;
+    margin-top: 10px;
 }
 
 .home-inst-box {
@@ -102,7 +147,7 @@
 
 .home-inst-box img {
     width: 100%;
-    height: 200px;
+    height: 250px;
     object-fit: cover;
 }
 
@@ -119,8 +164,8 @@
     color: $color-light;
     position: relative;
     font-size: 24px;
-    top: 85px;
-    left: 35%;
+    top: 105px;
+    left: 40%;
     padding: 5px;
 }
 
