--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -6,10 +6,13 @@
     border-radius: $radius;
   }
 
+.home-widget {
+    padding-top: 40px;
+}
 
 .boxes {
     display: flex;
-    height: 310px;
+    height: 315px;
     flex-direction: column;
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
@@ -17,6 +20,7 @@
     flex-wrap: wrap;
     color: $color-light;
     margin-bottom: 100px;
+    margin-top: 40px;
 
 
 
@@ -61,8 +65,8 @@
         font-weight: 200;
         font-family: 'Lato', sans-serif;
         position: absolute;
-        top: 113px;
-        right: 40px;
+        top: 114px;
+        right: 120px;
     }
 
     .leave-home-box-text h2 {
